syntax = "proto3";
package enreach.edgenode;

option go_package = "enreach/x/edgenode/types";

message Node {
  string nodeID = 1; 
  string userID = 2; 
  string nodeName = 3;
  string deviceType = 4; 
  string regionCode = 5;
  uint32 trafficType = 6; // Default 0 - stands for Enreach traffic
  string registerStatus = 7; 
  string workingStatus = 8; 
  string creator = 9; 
  uint64 createAt = 10; 
  string updator = 11; 
  uint64 updateAt = 12;
}
